tests/sql_correctness/snapshots/query_ordering_limits__1.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT aid, bid, abalance FROM pgbench_accounts ORDER BY bid ASC, abalance DESC LIMIT 20

+-----+-----+----------+
| aid | bid | abalance |
+-----+-----+----------+
| 2   | 1   | 0        |
| 3   | 1   | 0        |
| 4   | 1   | 0        |
| 5   | 1   | 0        |
| 6   | 1   | 0        |
| 7   | 1   | 0        |
| 8   | 1   | 0        |
| 9   | 1   | 0        |
| 10  | 1   | 0        |
| 11  | 1   | 0        |
| 12  | 1   | 0        |
| 13  | 1   | 0        |
| 14  | 1   | 0        |
| 15  | 1   | 0        |
| 16  | 1   | 0        |
| 17  | 1   | 0        |
| 18  | 1   | 0        |
| 19  | 1   | 0        |
| 20  | 1   | 0        |
| 1   | 1   | 0        |
+-----+-----+----------+
