tests/sql_correctness/snapshots/query_ordering_limits__3.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT aid, abalance FROM pgbench_accounts ORDER BY aid OFFSET 99990 LIMIT 10

++
++
