tests/sql_correctness/snapshots/query_ordering_limits__4.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT aid, abalance FROM pgbench_accounts ORDER BY abalance DESC LIMIT 1

+-----+----------+
| aid | abalance |
+-----+----------+
| 1   | 0        |
+-----+----------+
