tests/sql_correctness/snapshots/query_ordering_limits__6.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT aid, bid, abalance FROM pgbench_accounts ORDER BY bid ASC, abalance DESC, aid ASC LIMIT 30

+-----+-----+----------+
| aid | bid | abalance |
+-----+-----+----------+
| 1   | 1   | 0        |
| 2   | 1   | 0        |
| 3   | 1   | 0        |
| 4   | 1   | 0        |
| 5   | 1   | 0        |
| 6   | 1   | 0        |
| 7   | 1   | 0        |
| 8   | 1   | 0        |
| 9   | 1   | 0        |
| 10  | 1   | 0        |
| 11  | 1   | 0        |
| 12  | 1   | 0        |
| 13  | 1   | 0        |
| 14  | 1   | 0        |
| 15  | 1   | 0        |
| 16  | 1   | 0        |
| 17  | 1   | 0        |
| 18  | 1   | 0        |
| 19  | 1   | 0        |
| 20  | 1   | 0        |
| 21  | 1   | 0        |
| 22  | 1   | 0        |
| 23  | 1   | 0        |
| 24  | 1   | 0        |
| 25  | 1   | 0        |
| 26  | 1   | 0        |
| 27  | 1   | 0        |
| 28  | 1   | 0        |
| 29  | 1   | 0        |
| 30  | 1   | 0        |
+-----+-----+----------+
